--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.2.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@emailjs/browser": "^3.6.2",
+    "bootstrap": "^5.2.0",
+    "emailjs": "^4.0.0",
+    "formik": "^2.2.9",
+    "google-map-react": "^2.2.0",
+    "next": "^12.2.3",
+    "react": "18.0.0",
+    "react-dom": "18.2.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "8.20.0",
