--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
+    "@popperjs/core": "^2.11.5",
     "aos": "^2.3.4",
     "bootstrap": "^5.2.0",
     "formik": "^2.2.9",
